# ompfuns

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bottom/: CMakeLists.txt  aos.c  atomic.c  collapse.c  copyprivate.c  depend.c  firstprivate.c  lastprivate.c  single.c  task.c  tree.c
include/: chlock.h
