find_package(OpenMP)

add_executable(bottom_test_1 aos.c)
target_include_directories(bottom_test_1 PRIVATE ${PROJECT_SOURCE_DIR}/include)
if(OpenMP_C_FOUND)
    target_link_libraries(bottom_test_1 PUBLIC OpenMP::OpenMP_C)
endif()

add_executable(bottom_test_2 collapse.c)
target_include_directories(bottom_test_2 PRIVATE ${PROJECT_SOURCE_DIR}/include)
if(OpenMP_C_FOUND)
    target_link_libraries(bottom_test_2 PUBLIC OpenMP::OpenMP_C)
endif()

add_executable(bottom_test_3 firstprivate.c)
target_include_directories(bottom_test_3 PRIVATE ${PROJECT_SOURCE_DIR}/include)
if(OpenMP_C_FOUND)
    target_link_libraries(bottom_test_3 PUBLIC OpenMP::OpenMP_C)
endif()

add_executable(bottom_test_4 task.c)
target_include_directories(bottom_test_4 PRIVATE ${PROJECT_SOURCE_DIR}/include)
if(OpenMP_C_FOUND)
    target_link_libraries(bottom_test_4 PUBLIC OpenMP::OpenMP_C)
endif()

add_executable(bottom_test_5 copyprivate.c)
target_include_directories(bottom_test_5 PRIVATE ${PROJECT_SOURCE_DIR}/include)
if(OpenMP_C_FOUND)
    target_link_libraries(bottom_test_5 PUBLIC OpenMP::OpenMP_C)
endif()

add_executable(bottom_test_6 lastprivate.c)
target_include_directories(bottom_test_6 PRIVATE ${PROJECT_SOURCE_DIR}/include)
if(OpenMP_C_FOUND)
    target_link_libraries(bottom_test_6 PUBLIC OpenMP::OpenMP_C)
endif()

add_executable(bottom_test_7 atomic.c)
target_include_directories(bottom_test_7 PRIVATE ${PROJECT_SOURCE_DIR}/include)
if(OpenMP_C_FOUND)
    target_link_libraries(bottom_test_7 PUBLIC OpenMP::OpenMP_C)
endif()

add_executable(bottom_test_8 depend.c)
target_include_directories(bottom_test_8 PRIVATE ${PROJECT_SOURCE_DIR}/include)
if(OpenMP_C_FOUND)
    target_link_libraries(bottom_test_8 PUBLIC OpenMP::OpenMP_C)
endif()

add_executable(bottom_test_9 tree.c)
target_include_directories(bottom_test_9 PRIVATE ${PROJECT_SOURCE_DIR}/include)
if(OpenMP_C_FOUND)
    target_link_libraries(bottom_test_9 PUBLIC OpenMP::OpenMP_C)
endif()
